nullaway_error_db16e266-c1dc-409b-aa44-0a7abccae2b1.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/MapObject.java:330: error: [NullAway] unboxing of a @Nullable value
      return this.x - map.getChunkOffsetX() * map.getTileWidth();
                 ^
    (see http://t.uber.com/nullaway )
